--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                 </div>
             </div>
         </header>
-        <section class="mt-[100px]"><!--detail cards-->
-             <div class="relative w-full overflow-hidden px-4 py-10">
+        <section class="mt-[100px] mb-[10px]"><!--detail cards-->
+             <div class="relative w-full overflow-hidden px-4 ">
                 <ul class="carousel grid grid-flow-col auto-cols-[100%] sm:auto-cols-[calc(100%/2-12px)] md:auto-cols-[calc(100%/3-12px)] gap-4 overflow-x-auto scroll-smooth snap-x snap-mandatory scrollbar-hide">
                 <!-- Card 1 -->
                 <li class="card flex flex-col w-[390px] bg-gray-100 shadow-[0_3px_6px_rgba(0,0,0,0.23)] rounded-[15px] relative overflow-hidden cursor-pointer snap-start">
@@ -306,7 +306,7 @@
                 <i id="right" class="hidden md:flex fas fa-angle-right absolute top-1/2 right-2 transform -translate-y-1/2 bg-white text-lg w-14 h-14 flex items-center justify-center rounded-full shadow-md cursor-pointer z-10 border-blue-900 border-2"><img src="https://www.zim.com/static/images/chevron-right-solid.svg"></i>
             </div>
         </section>
-        <section class="mt-[50px]"><!--cargo cards-->
+        <section class="mt-[10px]"><!--cargo cards-->
             <div class="flex relative">
                 <div class="flex w-[80%] h-[70px] font-[Michroma] text-blue-900 text-[50px] ml-4">Cargo Services</div>
                 <div class="flex m-4"><a href="#" class="text-blue-900 text-[22px] inline-block font-[Assistant] mr-2 ">All Cargo Services </a><img src="https://www.zim.com/wwwroot/static/images/arrow-right-long-solid-primary.svg?v=-7--KikKqszQjvI1TUX-as9z4UA" class="w-[20px] h-[px] transform transition-transform duration-[1000ms] ease-in-out hover:translate-x-2"></div>
@@ -318,12 +318,12 @@
                         <!-- Background Image -->
                         <img src="https://www.zim.com/assets/jxvfv0ue/img_1149_dry_cargo.webp" alt="Dry Cargo" class="w-full h-full object-cover" />
 
-                        <!-- Always visible bottom gradient + title -->
+                        <!-- Always visible title -->
                         <div class="absolute h-[50%]  bottom-0 left-0 w-full bg-gradient-to-t from-[#041d40] to-transparent text-white p-4 z-10 transition-opacity duration-500 group-hover:opacity-0">
                             <h3 class="text-[20px] font-bold font-[Michroma] mt-[65%] text-[25px]">Dry Cargo</h3>
                         </div>
 
-                        <!-- Hover Content with lighter blue background -->
+                        <!-- Hover Content -->
                         <div class="absolute inset-0 bg-[#041d40]/65 text-white p-4 flex flex-col justify-end transform translate-y-full group-hover:translate-y-0 transition duration-500 ease-in-out z-20">
                             <div class="mt-auto">
                             <h3 class="text-[24px] font-bold mb-2 font-[Michroma] mb-12">Dry Cargo</h3>
@@ -340,12 +340,12 @@
                         <!-- Background Image -->
                         <img src="https://www.zim.com/assets/1mydfag2/italy-zimonitor.webp" alt="Dry Cargo" class="w-full h-full object-cover" />
 
-                        <!-- Always visible bottom gradient + title -->
+                        <!-- Always visible title -->
                         <div class="absolute h-[50%]  bottom-0 left-0 w-full bg-gradient-to-t from-[#041d40] to-transparent text-white p-4 z-10 transition-opacity duration-500 group-hover:opacity-0">
                             <h3 class="text-[20px] font-bold font-[Michroma] mt-[65%] text-[25px]">Reefer Cargo</h3>
                         </div>
 
-                        <!-- Hover Content with lighter blue background -->
+                        <!-- Hover Content  -->
                         <div class="absolute inset-0 bg-[#041d40]/65 text-white p-4 flex flex-col justify-end transform translate-y-full group-hover:translate-y-0 transition duration-500 ease-in-out z-20">
                             <div class="mt-auto">
                             <h3 class="text-[24px] font-bold mb-2 font-[Michroma] mb-12">Reefer Cargo</h3>
@@ -362,12 +362,12 @@
                         <!-- Background Image -->
                         <img src="https://www.zim.com/assets/3gon4bmw/img_1969_project_cargo.webp" alt="Dry Cargo" class="w-full h-full object-cover" />
 
-                        <!-- Always visible bottom gradient + title -->
+                        <!-- Always visible title -->
                         <div class="absolute h-[50%]  bottom-0 left-0 w-full bg-gradient-to-t from-[#041d40] to-transparent text-white p-4 z-10 transition-opacity duration-500 group-hover:opacity-0">
                             <h3 class="text-[20px] font-bold font-[Michroma] mt-[65%] text-[25px]">Special Cargo</h3>
                         </div>
 
-                        <!-- Hover Content with lighter blue background -->
+                        <!-- Hover Content -->
                         <div class="absolute inset-0 bg-[#041d40]/65 text-white p-4 flex flex-col justify-end transform translate-y-full group-hover:translate-y-0 transition duration-500 ease-in-out z-20">
                             <div class="mt-auto">
                             <h3 class="text-[24px] font-bold mb-2 font-[Michroma] mb-12">Special Cargo</h3>
@@ -384,12 +384,12 @@
                         <!-- Background Image -->
                         <img src="https://www.zim.com/assets/psipqe4k/new-zealand-bac1895_inland_transport.webp" alt="Dry Cargo" class="w-full h-full object-cover" />
 
-                        <!-- Always visible bottom gradient + title -->
+                        <!-- Always visible title -->
                         <div class="absolute h-[50%]  bottom-0 left-0 w-full bg-gradient-to-t from-[#041d40] to-transparent text-white p-4 z-10 transition-opacity duration-500 group-hover:opacity-0">
-                            <h3 class="text-[20px] font-bold font-[Michroma] mt-[65%] text-[25px]">Dry Cargo</h3>
+                            <h3 class="text-[20px] font-bold font-[Michroma] mt-[65%] text-[25px]">Inland Transport</h3>
                         </div>
 
-                        <!-- Hover Content with lighter blue background -->
+                        <!-- Hover Content  -->
                         <div class="absolute inset-0 bg-[#041d40]/65 text-white p-4 flex flex-col justify-end transform translate-y-full group-hover:translate-y-0 transition duration-500 ease-in-out z-20">
                             <div class="mt-auto">
                             <h3 class="text-[24px] font-bold mb-2 font-[Michroma] mb-12">Inland Transport</h3>
@@ -406,12 +406,12 @@
                         <!-- Background Image -->
                         <img src="https://www.zim.com/assets/u2nluxat/zimonitor-stacking-600x600.webp" alt="Dry Cargo" class="w-full h-full object-cover" />
 
-                        <!-- Always visible bottom gradient + title -->
+                        <!-- Always visible title -->
                         <div class="absolute h-[50%]  bottom-0 left-0 w-full bg-gradient-to-t from-[#041d40] to-transparent text-white p-4 z-10 transition-opacity duration-500 group-hover:opacity-0">
                             <h3 class="text-[20px] font-bold font-[Michroma] mt-[65%] text-[25px]">ZIMonitor</h3>
                         </div>
 
-                        <!-- Hover Content with lighter blue background -->
+                        <!-- Hover Content -->
                         <div class="absolute inset-0 bg-[#041d40]/65 text-white p-4 flex flex-col justify-end transform translate-y-full group-hover:translate-y-0 transition duration-500 ease-in-out z-20">
                             <div class="mt-auto">
                             <h3 class="text-[24px] font-bold mb-2 font-[Michroma] mb-12">ZIMonitor</h3>
@@ -428,7 +428,120 @@
                 <i id="right" class="hidden md:flex fas fa-angle-right absolute top-1/2 right-2 transform -translate-y-1/2 bg-white text-lg w-14 h-14 flex items-center justify-center rounded-full shadow-md cursor-pointer z-10 border-blue-900 border-2"><img src="https://www.zim.com/static/images/chevron-right-solid.svg"></i>
             </div>
         </section>
+        <section class="bg-white py-12"><!--Digital card-->
+        <div class="flex relative m-8" >
+                <div class="flex w-[80%] h-[70px] font-[Michroma] text-blue-900 text-[50px] ml-4">Digital Solutions</div>
+                <div class="flex m-2"><a href="#" class="text-blue-900 text-[22px] inline-block font-[Assistant] mr-2 ">All Digital Solutions </a><img src="https://www.zim.com/wwwroot/static/images/arrow-right-long-solid-primary.svg?v=-7--KikKqszQjvI1TUX-as9z4UA" class="w-[20px] h-[px] transform transition-transform duration-[1000ms] ease-in-out hover:translate-x-2"></div>
+        </div>
+        <div class="max-w-7xl mx-auto px-4">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+
+            <!-- Card 1 -->
+            <div class="min-h-[250px] rounded-xl shadow-[0_3px_6px_rgba(0,0,0,0.23)] overflow-hidden transition duration-500 group" style="background-color: #00a3e0;">
+                <div class="p-6 ">
+                <h3 class="text-[28px] font-bold font-[Michroma] text-black transition duration-500 group-hover:text-white">myZIM Personal Area</h3>
+                <p class=" text-[16px] mt-2 font-[Assistant] text-black transition duration-500 group-hover:text-white">Get first-hand access to all your documents and shipping data in one place.</p>
+                <a href="#" class="inline-flex items-center mt-4 text-black font-[Assistant] text-[18px] hover:underline transition hover:text-white">Go Multi
+                    <a href="#" class="w-5 h-5 ml-2 text-black font-bold group-hover:text-white translate-x-1 transition-transform duration-300">→</a>
+                </a>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="min-h-[250px] rounded-xl shadow-[0_3px_6px_rgba(0,0,0,0.23)] overflow-hidden transition duration-500 group" style="background-color: #f8991d;">
+                <div class="p-6  ">
+                <h3 class="text-[28px] font-bold font-[Michroma] text-black transition duration-500 group-hover:text-white">eB/L Service</h3>
+                <p class="text-black text-[16px] mt-2 font-[Assistant] group-hover:text-white">Powered by Wave, this paperless platform digitizes all trade-related documents, with full control of your privacy.</p>
+                <a href="#" class="inline-flex items-center mt-4 text-black font-[Assistant] text-[18px] hover:underline transition hover:text-white">Go Multi
+                    <a href="#" class="w-5 h-5 ml-2 text-black font-bold group-hover:text-white translate-x-1 transition-transform duration-300">→</a>
+                </a>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="min-h-[250px] rounded-xl shadow-[0_3px_6px_rgba(0,0,0,0.23)] overflow-hidden transition duration-500 group" style="background-color: #913a96;">
+                <div class="p-6  ">
+                <h3 class="text-[28px] font-bold font-[Michroma] text-black transition duration-500 group-hover:text-white">ZIMonitor</h3>
+                <p class="text-black text-[16px] mt-2 font-[Assistant] group-hover:text-white">Track, monitor and even control your sensitive cargo’s environment from start to finish.</p>
+                <a href="#" class="inline-flex items-center mt-4 text-black font-[Assistant] text-[18px] hover:underline transition hover:text-white">Go Multi
+                    <a href="#" class="w-5 h-5 ml-2 text-black font-bold group-hover:text-white translate-x-1 transition-transform duration-300">→</a>
+                </a>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="min-h-[250px] rounded-xl shadow-[0_3px_6px_rgba(0,0,0,0.23)] overflow-hidden transition duration-500 group" style="background-color: #9a1c1f;">
+                <div class="p-6 ">
+                <h3 class="text-[28px] font-bold font-[Michroma] text-black transition duration-500 group-hover:text-white">eZIM</h3>
+                <p class="text-black text-[16px] mt-2 font-[Assistant] group-hover:text-white">A smart and intuitive way to submit and manage your bookings 24/7.</p>
+                <a href="#" class="inline-flex items-center mt-4 text-black font-[Assistant] text-[18px] hover:underline transition hover:text-white">Go Multi
+                    <a href="#" class="w-5 h-5 ml-2 text-black font-bold group-hover:text-white translate-x-1 transition-transform duration-300">→</a>
+                </a>
+            </div>
+            </div>
+
+            <!-- Card 5 -->
+             <div class="min-h-[250px] text-white rounded-xl shadow-[0_3px_6px_rgba(0,0,0,0.23)] overflow-hidden transition duration-500 hover:text-yellow" style="background-color: #142c79;">
+                <h3 class=" text-center mt-[50px] text-[24px] font-bold font-[Assistant]  ">As a ZIM customer, your experience will always be Personal, Digital and Exceptional.</h3>
+            </div>
+            
+            </div>
+        </div>
+    </section>
+        <footer class="bg-[#002f5f] text-white text-sm font-[Assistant]">
+            <div class="max-w-7xl mx-auto px-6 md:px-10 py-12 grid grid-cols-2 md:grid-cols-4 gap-8">
                 
+                <!-- Logo Column -->
+                <div>
+                <img src="https://www.zim.com/assets/f4ln4see/logo80-tablets-light-200x112.png" alt="ZIM Logo" class="h-12 mb-4">
+                <p class="text-[#cdd1d4] leading-relaxed text-[14px]">
+                    ZIM Integrated Shipping Services Ltd. is a global container shipping company with over 75 years of experience.
+                </p>
+                </div>
+
+                <!-- Column 1: About -->
+                <div>
+                <h4 class="uppercase font-bold text-[15px] mb-4">About ZIM</h4>
+                <ul class="space-y-2 text-[#cdd1d4]">
+                    <li><a href="#" class="hover:underline">Company Profile</a></li>
+                    <li><a href="#" class="hover:underline">Careers</a></li>
+                    <li><a href="#" class="hover:underline">Leadership</a></li>
+                    <li><a href="#" class="hover:underline">ESG</a></li>
+                </ul>
+                </div>
+
+                <!-- Column 2: Tools -->
+                <div>
+                <h4 class="uppercase font-bold text-[15px] mb-4">Tools</h4>
+                <ul class="space-y-2 text-[#cdd1d4]">
+                    <li><a href="#" class="hover:underline">Track a Shipment</a></li>
+                    <li><a href="#" class="hover:underline">Schedules</a></li>
+                    <li><a href="#" class="hover:underline">Offices</a></li>
+                    <li><a href="#" class="hover:underline">eZIM Login</a></li>
+                </ul>
+                </div>
+
+                <!-- Column 3: Contact -->
+                <div>
+                <h4 class="uppercase font-bold text-[15px] mb-4">Support</h4>
+                <ul class="space-y-2 text-[#cdd1d4]">
+                    <li><a href="#" class="hover:underline">Contact Us</a></li>
+                    <li><a href="#" class="hover:underline">FAQs</a></li>
+                    <li><a href="#" class="hover:underline">Terms of Use</a></li>
+                    <li><a href="#" class="hover:underline">Privacy Policy</a></li>
+                </ul>
+                </div>
+            </div>
+
+            <!-- Divider -->
+            <div class="border-t border-[#3d5979]"></div>
+
+            <!-- Bottom Strip -->
+            <div class="text-center text-[#cdd1d4] text-xs py-4">
+                © 2025 ZIM Integrated Shipping Services Ltd. All rights reserved.
+            </div>
+        </footer>
+
         <script src="script.js"></script>
     </body>
 </html>
